fix: use wrapping size for column assignment

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -107,14 +107,13 @@ body {
 }
 
 .note {
-  /* border: 1px solid white; */
   border-radius: 10px;
   margin: 1px;
   padding: 15px 10px;
   margin: 0;
   width: 400px;
-  /* background-color: #7a7a7a; */
-  background-color: #404040;
+
+  background-color: var(--note-color);
 }
 
 .note-label {
